--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-responsive-carousel": "^3.2.5",
     "react-router-dom": "^5.1.2",
+    "react-router-ga": "^1.2.3",
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1"
@@ -24,7 +25,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sitemap": "babel-node ./src/sitemap/generator.js"
-
   },
   "eslintConfig": {
     "extends": "react-app"
