--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.17.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-responsive-carousel": "^3.2.5",
     "react-router-dom": "^5.1.2",
-    "react-router-ga": "^1.2.3",
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1"
